--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/leaflet": "^1.9.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
@@ -21,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"leaflet": "^1.9.4",
 		"svelte-inview": "^4.0.2"
 	}
 }
